[FIX] Fix footer z-index

--- a/src/app/components/Footer/styles.module.scss
+++ b/src/app/components/Footer/styles.module.scss
@@ -9,7 +9,7 @@
   padding: 30px;
   font-weight: 300;
   bottom: env(safe-area-inset-bottom, 0);
-  z-index: 995;
+  z-index: 10;
 
   .watermark {
     opacity: 0.5;
